<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.secondScreen.SecondActivity">

    <ImageView
        android:id="@+id/btn_back_second"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:scaleType="fitCenter"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/btn_back_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_btn_back" />

    <TextView
        android:id="@+id/tv_appbar_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/second_screen"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back_second"
        app:layout_constraintStart_toEndOf="@+id/btn_back_second"
        app:layout_constraintTop_toTopOf="@+id/btn_back_second" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appbar_second" />

    <TextView
        android:id="@+id/tv_welcome_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appbar_second" />

    <TextView
        android:id="@+id/tv_uname_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/john_doe"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_second" />

    <TextView
        android:id="@+id/tv_select_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_user_name"
        android:fontFamily="@font/poppins_bold"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_uname_second" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center"
        android:backgroundTint="#2B637B"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/bg_btn"
        android:text="@string/choose_a_user"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>