<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:background="@drawable/gradient_background"
    tools:context=".presentation.firstScreen.MainActivity">


    <ImageView
        android:id="@+id/imageuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_photo"
        android:layout_marginTop="50dp"
        android:padding="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="310dp"
        android:layout_height="57dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_inputtxt"
            android:textColorHint="@color/black"
            android:hint="@string/name"
            android:gravity="start"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_palindrome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_inputtxt"
            android:hint="@string/palindrome"
            android:gravity="start"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="#2B637B"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/check" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="#2B637B"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/next" />

</LinearLayout>
